css/style.css
html,
body{
  
    font-family: sans-serif;
    font-weight: 300;
    font-size: 1rem;
    font-weight: 400;
    line-height: 1.15;
    height: 100%;
    width: 100%;
    max-width: 100vw;
    max-height: 100vh;
    position: absolute;
    background-repeat: no-repeat;
    background-position: center;
    background-size: cover;
    background-color: #fafafa;
    -webkit-text-size-adjust: 100%;
    -ms-text-size-adjust: 100%;
    -ms-overflow-style: scrollbar;
    -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
}


h1,
h2,
h3,
.h1,
.h2,
.h3 {
  margin-top: 20px;
  margin-bottom: 10px;
}

h4,
h5,
h6,
.h4,
.h5,
.h6 {
  margin-top: 10px;
  margin-bottom: 10px;
}

.optionButton {
  width: 100%;
}

@media (min-width: 768px) {
  .container-small {
      width: 300px;
  }
  .container-large {
      width: 970px;
  } 
} 
@media (min-width: 992px) {
  .container-small {
      width: 500px;
  }
  .container-large {
      width: 1170px;
  } 
} 
@media (min-width: 1200px) {
  .container-small {
      width: 700px;
  }
  .container-large {
      width: 1500px;
  } 
}

.container-small, .container-large {
  max-width: 100%;
}


p {
  
    margin-top: 0;
    margin-bottom: 1rem;
}

html * {
    -webkit-font-smoothing: antialiased;
    -moz-osx-font-smoothing: grayscale;
}
h1,
.h1 {
  font-size: 3.3125rem;
  line-height: 1.15em;
}

h2,
.h2 {
  font-size: 2.25rem;
  line-height: 1.5em;
}

h3,
.h3 {
  font-size: 1.5625rem;
  line-height: 1.4em;
}

h4,
.h4 {
  font-size: 1.125rem;
  line-height: 1.5em;
}

h5,
.h5 {
  font-size: 1.0625rem;
  line-height: 1.55em;
  margin-bottom: 15px;
}

h6,
.h6 {
  font-size: 0.50rem;
  text-transform: uppercase;
  font-weight: 500;
}
b {
  font-weight: 700;
}

p {
  font-size: 14px;
  margin: 0 0 10px;
}

#backgroundImg {
  filter: brightness(50%);
}


.title{
  font-weight: 700;
  font-family: "Roboto Slab", "Times New Roman", serif;
}

.position{
  font-style: italic;
}
.software{
  font-style: italic;
}

.title,
.title a,
.card-title,
.card-title a,
.info-title,
.info-title a,
.footer-brand,
.footer-brand a,
.footer-big h5,
.footer-big h5 a,
.footer-big h4,
.footer-big h4 a,
.media .media-heading,
.media .media-heading a {
  color: #3C4858;
  text-decoration: none;
}





.background {
    position: absolute;
    display: block;
    top: 0;
    left: 0;
    z-index: 0;
  }

.main{
    position: absolute;
    top: 0;
    width: 100%;
    color: white;
}
h2 { font-size: 20px; line-height: 38px; }
.headcover{
    display: block;
    top: 0;
    left: 0;
    z-index: 0;
    height: 100vh;
    min-height: 500px;
    background-image: url('https://source.unsplash.com/vHnVew5foFU/1920x1080');
    background-size: cover;
    background-position: center;
    background-repeat: no-repeat;
    
}

.headcover2{
    display: block;
    top: 0;
    left: 0;
    z-index: 0;
    height: 100vh;
    min-height: 500px;
    background-image: url('https://source.unsplash.com/vHnVew5foFU/1920x1080');
    background-size: cover;
    background-position: center;
    background-repeat: no-repeat;
    
}

div.item{
    display: inline-block;
    text-align: center;
} 

.selector-for-some-widget{
    box-sizing: content-box;
}

.header-photo{
    background: url(images/background.jpeg);
    height: 100vh;
    background-repeat: no-repeat;
    position: relative; 
    /* parallax */
    background-attachment: fixed;
    background-position: center;
    background-repeat: no-repeat;
    background-size: cover;
}


@media only screen and (max-width:749px) {
  .header-photo {
    background-attachment: inherit;
  }
}


.page-caption { padding-top: 170px; padding-bottom: 174px; }
.page-title { 
    line-height: 1; 
    color: #fff; 
    font-weight: 700; 
    text-align: center;
    margin-top: 30px;
    margin-bottom: 25px;
    min-height: 32px;
      
}

.main-raised {
    margin: -60px 30px 0px;
    border-radius: 6px;
    box-shadow: 0 16px 24px 2px rgba(0, 0, 0, 0.14), 0 6px 30px 5px rgba(0, 0, 0, 0.12), 0 8px 10px -5px rgba(0, 0, 0, 0.2);
  }
.card { 
        font-size: .875rem;
        border: 0;
        margin-bottom: 30px;
        margin-top: 30px;
        border-radius: 6px;
        color: rgba(0, 0, 0, 0.87);
        width: 100%;
}
.card-section { position: relative; bottom: 60px; }
.card-block { padding: 80px; }




.section-title { margin-bottom: 60px; }

.image {
    -webkit-filter: brightness(100%);
	-moz-filter: brightness(100%);
	-o-filter: brightness(100%);
	-ms-filter: brightness(100%);
	filter: brightness(100%);
}

.image:hover{
    -webkit-filter: brightness(70%);
	-moz-filter: brightness(70%);
	-o-filter: brightness(70%);
	-ms-filter: brightness(70%);
	filter: brightness(70%);
}
.dark {
    -webkit-filter: grayscale(100%); /* Safari 6.0 - 9.0 */
    filter: grayscale(100%);
}

.img {
    max-width: 100%;
    height:auto;
}

/* for anime.js  */
.ml11 {
    font-weight: 700;
    font-size: 3.5em;
  }
  
  .ml11 .text-wrapper {
    position: relative;
    display: inline-block;
    padding-top: 0.1em;
    padding-right: 0.05em;
    padding-bottom: 0.15em;
  }
  
  .ml11 .line {
    opacity: 0;
    position: absolute;
    left: 0;
    height: 100%;
    width: 3px;
    background-color: #fff;
    transform-origin: 0 50%;
  }
  
  .ml11 .line1 { 
    top: 0; 
    left: 0;
  }
  
  .ml11 .letter {
    display: inline-block;
    line-height: 1em;
  }


  .thumbnail {
    position: relative;
  }

  .caption {
    position: absolute;
    top: 20%;
    left: 0;
    width: 100%;
    color: white;
  }

  .resumecontainer{
    width: 100%;
    object-fit: cover;
    
  }

